--- a/tasks/task_1/kuznetsov_a_most_different_neighbor_elements/CMakeLists.txt
+++ b/tasks/task_1/kuznetsov_a_most_different_neighbor_elements/CMakeLists.txt
@@ -11,7 +11,7 @@ if( USE_MPI )
     project( ${ProjectId} )
     message( STATUS "-- " ${ProjectId} )
 
-    file(GLOB_RECURSE ALL_SOURCE_FILES *.cpp *.h)
+    file(GLOB_RECURSE ALL_SOURCE_FILES *.cpp *.hpp)
 
     set(PACK_LIB "${ProjectId}_lib")
     add_library(${PACK_LIB} STATIC ${ALL_SOURCE_FILES} )
